fixed layout aligned to left on small screen size

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1075,5 +1075,5 @@ h3 {
 }
 
 .mainSection {
-  float: left;
+ /* float: left;*/
 }
